# foldtree2

./: .gitignore  .gitmodules  ASR.ancestral.fasta  COMMITMENT_COST_SCHEDULING.md  GITHUB_PAGES_SETUP.md  LEARN_LIGHTNING_UPDATE.md  LEARN_MONODECODER_SYNC.md  README.md  README.txt  TENSORBOARD_CONFIG_GUIDE.md  __init__.py  aln_encoded.fasta  aln_encoded_test.fasta  aln_nexus.nx  autoencoder.py  autoencoder_net.py  condaenv.yml  config_all_three_decoders.yaml  config_commitment_scheduling.yaml  config_cosine_restarts.yaml  config_deepspeed_stage3.yaml  config_large_batch.yaml  config_large_model_fsdp.yaml  config_multi_gpu_training.yaml  config_muon_training.yaml  config_notebook_1k_epochs.yaml  config_notebook_1k_epochs_small.yaml  config_notebook_example.yaml  config_with_warmup.yaml  custom_matrix.nex  decoder.pth  decoder_lowcost_small10head_transformer_pool  decoder_mk2_aa.pth  decoder_mk2_aa_20.pth  egnlayer.py  encode_pdbs.py  encoder.pth  encoder_mk2_aa.pth  encoder_mk2_aa_10.pth  environment-dev.yml  (+87 more)
.ipynb_checkpoints/: esm_retrain-checkpoint.ipynb  molecule_graph-checkpoint.ipynb
alps/: alps.dockerfile  train_distributed.sh  trainalps.sh
benchmark_configs/: config_10_embeddings.yaml  config_15_embeddings.yaml  config_20_embeddings.yaml  config_25_embeddings.yaml  config_30_embeddings.yaml  config_35_embeddings.yaml  config_40_embeddings.yaml
conda-recipe/: build.sh  meta.yaml  post-install.sh  post-link.sh  run_test.py
config/: aaindex1.csv  config.yaml
converter/: converter.py  pdbgraph.py
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  overview.rst  representation_conversion_guide.md
foldtree2/: encode_pdbs.py  foldcomp2fasta.py  foldcomp_otf.py  ft2treebuilder.py  learn_folding.py  learn_lightning.py  learn_monodecoder.py  learn_sup_decoders.py  mafft_wrappers.py  makesubmat.py  scaling_experiment.py  scaling_experiment_lightning.py
model/: foldtree2Gnn.py
models/: decoder_lowcost_small10head_transformer_pool  encoder_lowcost_small10head_successive_params.txt  mergeddecoder_foldtree2_test_mafftmat.mtx  (+6 more)
(+1646 files in other folders)
